[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyollama"
version = "0.1.0"
description = "Run multiple Ollama servers in parallel for concurrent LLM inference"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ollama", "llm", "parallel", "inference", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/okanyenigun/polyollama"
Repository = "https://github.com/okanyenigun/polyollama"
